<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuNuevoCliente"
        android:title="@string/menu_nuevoCliente" />
    <item
        android:id="@+id/menuNuevaCita"
        android:title="@string/menu_nuevaCita" />
    <item
        android:id="@+id/menuDatos"
        android:title="@string/menu_datos" />
    <item
        android:id="@+id/menuPromocion"
        android:title="@string/menu_promo" />
    <item
        android:id="@+id/menuGaleriaImagenes"
        android:title="@string/menu_galeria" />
    <item
        android:id="@+id/menuEliminarDatosGaleria"
        android:title="@string/menu_elimina_datos_galeria" />
    <item
        android:id="@+id/menuSalir"
        android:title="@string/menu_salir" />
</menu>