<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_logo_cyw"
    android:orientation="vertical"
    tools:context=".NuevaCita">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/item_background">

        <Spinner
            android:id="@+id/spRegistros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:textSize="50sp"/>

        <EditText
            android:id="@+id/txtRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_registro"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:hint="@string/hint_nombre"/>
        <EditText
            android:id="@+id/txtMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:hint="@string/hint_mascota"/>

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:hint="@string/hint_Fecha"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>
        <EditText
            android:id="@+id/txtHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:hint="@string/hint_Hora"
            android:focusable="false"
            android:onClick="showTimePickerDialog"/>
        <EditText
            android:id="@+id/txtCosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:hint="@string/hint_Costo"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:backgroundTint="@color/colorAgendaProxima"
            android:textSize="24dp"/>
        <Button
            android:id="@+id/btncompartir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAgendaProxima"
            android:text="@string/compartir"
            android:textSize="24dp"/>

    </LinearLayout>



</LinearLayout>