<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/item_background"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/doghappy"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_background"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/Btn_camara_imagen"
            android:text="@string/Btn_camara_imagen"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Btn_archivo_imagen"
            android:text="@string/Btn_archivo_imagen"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Btn_eliminar_imagen"
            android:text="@string/Btn_eliminar_imagen"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Btn_cerrar_imagen"
            android:text="@string/Btn_cerrar_imagen"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>