<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_logo_cyw"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_backgroup_tille"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/agenda_clientes"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/boton"
            android:text="@string/nuevo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_backgroup_tille">
        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_backgroup_tille">

        <TextView
            android:id="@+id/totalCostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/total_mes_0"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>

